<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#d3d3d3"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#FFFFFF" >
        </GridLayout>

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/persolalizar"
            android:textColor="#000000"
            android:textSize="40dp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="55dip"
            android:background="#FFFFFF" >
        </GridLayout>

        <TextView
            android:id="@+id/t1"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginTop="55dip"
            android:background="#FFFFFF"
            android:text="@string/localizacao_atual"
            android:textColor="#000000"
            android:textSize="40dp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="60dip"
            android:drawSelectorOnTop="true" >
        </Spinner>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="125dip"
            android:background="#FFFFFF" >
        </GridLayout>

        <TextView
            android:id="@+id/t2"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginTop="125dip"
            android:background="#FFFFFF"
            android:text="@string/linha_da_rota"
            android:textColor="#000000"
            android:textSize="40dp" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="130dip"
            android:drawSelectorOnTop="true" >
        </Spinner>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="195dip"
            android:background="#FFFFFF" >
        </GridLayout>

        <TextView
            android:id="@+id/t3"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginTop="195dip"
            android:background="#FFFFFF"
            android:text="@string/area_de_atuacao"
            android:textColor="#000000"
            android:textSize="40dp" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="200dip"
            android:drawSelectorOnTop="true" >
        </Spinner>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="265dip"
            android:background="#FFFFFF" >
        </GridLayout>

        <TextView
            android:id="@+id/t4"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginTop="265dip"
            android:background="#FFFFFF"
            android:text="@string/mancha_criminal"
            android:textColor="#000000"
            android:textSize="40dp" />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="270dip"
            android:drawSelectorOnTop="true" >
        </Spinner>

        <Button
            android:id="@+id/buscar"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignParentBottom="true"
            android:background="#428bca"
            android:onClick="Salvar"
            android:layout_centerHorizontal="true"
            android:text="@+string/salvar" />

        <Button
            android:id="@+id/voltar"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/logo"
            android:background="#428bca"
            android:onClick="Voltar"
            android:text="@string/voltar" />

    </RelativeLayout>

</ScrollView>